<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset"
                android:textColor="@android:color/white"
                android:textSize="@dimen/twenty_text_size"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_verified_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/verify"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/twenty_text_size" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_margin"
                android:text="@string/enterPassword"
                android:textSize="@dimen/eighteen_text_size" />

            <EditText
                android:id="@+id/et_reset_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:hint=""
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_margin"
                android:text="@string/reenterPassword"
                android:textSize="@dimen/eighteen_text_size" />

            <EditText
                android:id="@+id/et_reset_retype_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:hint=""
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1" />

            <TextView
                android:id="@+id/signup_validation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/unit_margin"
                android:layout_marginEnd="@dimen/deca_margin"
                android:layout_marginRight="@dimen/deca_margin"
                android:layout_marginTop="@dimen/fifteen_margin"
                android:hint="@string/password_note"
                android:lineSpacingExtra="@dimen/deca_margin"
                android:textColor="@color/messages"
                android:textSize="@dimen/fifteen_text_size" />

            <android.support.v7.widget.GridLayout
                android:id="@+id/signup_validation_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/unit_margin"
                android:layout_marginLeft="@dimen/fifteen_margin"
                android:layout_marginRight="@dimen/unit_margin"
                android:layout_marginStart="@dimen/fifteen_margin"
                app:columnCount="1"
                app:orientation="horizontal"
                app:rowCount="3">

                <TextView
                    android:id="@+id/grid_uppercase"
                    android:layout_marginBottom="@dimen/small_space_three"
                    android:layout_marginTop="@dimen/thirteen_margin"
                    android:drawableLeft="@drawable/ic_green_dot"
                    android:drawablePadding="@dimen/small_space_five"
                    android:drawableStart="@drawable/ic_green_dot"
                    android:text="@string/firstLastMiddleName" />

                <TextView
                    android:id="@+id/grid_lowercase"
                    android:layout_marginBottom="@dimen/small_space_three"
                    android:layout_marginTop="@dimen/small_space_three"
                    android:drawableLeft="@drawable/ic_green_dot"
                    android:drawablePadding="@dimen/small_space_five"
                    android:drawableStart="@drawable/ic_green_dot"
                    android:text="@string/eight_characters" />

                <TextView
                    android:id="@+id/grid_number"
                    android:layout_marginBottom="@dimen/small_space_three"
                    android:layout_marginTop="@dimen/small_space_three"
                    android:drawableLeft="@drawable/ic_green_dot"
                    android:drawablePadding="@dimen/small_space_five"
                    android:drawableStart="@drawable/ic_green_dot"
                    android:text="@string/three_categories" />

            </android.support.v7.widget.GridLayout>

            <android.support.v7.widget.GridLayout
                android:id="@+id/password_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/unit_margin"
                android:layout_marginLeft="@dimen/fifty_five_space"
                android:layout_marginRight="@dimen/unit_margin"
                android:layout_marginStart="@dimen/fifty_five_space"
                app:columnCount="1"
                app:orientation="horizontal"
                app:rowCount="3">

                <TextView
                    android:id="@+id/grid_upper_case"
                    android:layout_marginBottom="@dimen/small_space_three"
                    android:layout_marginTop="@dimen/small_space_three"
                    android:drawableLeft="@drawable/ic_grey_dot"
                    android:drawablePadding="@dimen/small_space_five"
                    android:drawableStart="@drawable/ic_grey_dot"
                    android:text="@string/password_uppercase" />

                <TextView
                    android:id="@+id/grid_lower_case"
                    android:layout_marginBottom="@dimen/small_space_three"
                    android:layout_marginTop="@dimen/small_space_three"
                    android:drawableLeft="@drawable/ic_grey_dot"
                    android:drawablePadding="@dimen/small_space_five"
                    android:drawableStart="@drawable/ic_grey_dot"
                    android:text="@string/password_lowercase" />

                <TextView
                    android:id="@+id/grid_txt_number"
                    android:layout_marginBottom="@dimen/small_space_three"
                    android:layout_marginTop="@dimen/small_space_three"
                    android:drawableLeft="@drawable/ic_grey_dot"
                    android:drawablePadding="@dimen/small_space_five"
                    android:drawableStart="@drawable/ic_grey_dot"
                    android:text="@string/password_digits" />

                <TextView
                    android:id="@+id/grid_signs"
                    android:layout_marginBottom="@dimen/small_space_three"
                    android:layout_marginTop="@dimen/small_space_three"
                    android:drawableLeft="@drawable/ic_grey_dot"
                    android:drawablePadding="@dimen/small_space_five"
                    android:drawableStart="@drawable/ic_grey_dot"
                    android:text="@string/password_signs" />

            </android.support.v7.widget.GridLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <Button
            android:id="@+id/btn_reset_successfully"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/fifteen_margin"
            android:layout_marginLeft="@dimen/fifteen_margin"
            android:layout_marginRight="@dimen/fifteen_margin"
            android:layout_marginStart="@dimen/fifteen_margin"
            android:background="@drawable/round_corner"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_text_size" />


    </LinearLayout>

</LinearLayout>